[project]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Mukesh", email = "Kumarmukeshmj143@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.5,<3.0.0",
    "sqlalchemy>=2.0.46,<3.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "alembic>=1.18.3,<2.0.0",
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn>=0.40.0,<0.41.0",
    "mysql-connector-python>=9.6.0,<10.0.0",
    "pymysql>=1.1.2,<2.0.0",
    "pydantic[email]>=2.12.5,<3.0.0"
]

[tool.poetry]
packages = [{ include = "patient_encounter_system", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=patient_encounter_system --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.14.14,<0.15.0",
    "pylint>=4.0.4,<5.0.0",
    "httpx>=0.28.1,<0.29.0",
    "black>=24.10.0,<25.0.0",
    "bandit>=1.8.1,<2.0.0"
]
